--- a/views/index.html
+++ b/views/index.html
@@ -1,14 +1,3 @@
-<!-- <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>My task list</title>
-  </head>
-  <body>
-    <h1>Index Page</h1>
-  </body>
-</html> -->
-
 <!DOCTYPE html>
 <html>
   <head>
@@ -16,6 +5,7 @@
     <base href="/">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="client/bower_components/bootstrap/dist/css/bootstrap.css">
     <link rel="stylesheet" href="styles.css">
 
     <!-- Polyfill(s) for older browsers -->
